--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "moduleResolution": "Node",
     "resolveJsonModule": true,
     "noImplicitAny": true,
-    "sourceMap": false,
+    "sourceMap": true,
     "allowJs": true,
     "jsx": "react-jsx",
     "esModuleInterop": true,
