--- a/.npmignore
+++ b/.npmignore
@@ -5,5 +5,9 @@ rollup.config.js
 src/
 lib/status.html
 lib/dts/
-example/
+examples/
 build/
+next.config.mjs
+.next/
+.rollup.cache/
+tsconfig.tsbuildinfo
