--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "个人项目公共组件",
   "license": "AGPL-3.0",
   "scripts": {
+    "nextjs": "NODE_ENV=development next dev",
     "build": "rollup --config rollup.config.mjs"
   },
   "repository": {
@@ -56,7 +57,6 @@
     "@mui/material-nextjs": "^5.16.4",
     "@next/third-parties": "^14.2.5",
     "@scure/base": "^1.1.7",
-    "@simplewebauthn/browser": "^10.0.0",
     "@types/md5": "^2.3.5",
     "@types/parse-uri": "^1.0.2",
     "axios": "^1.7.2",
@@ -74,22 +74,7 @@
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
     "lodash": "^4.17.21",
-    "@pnnh/stele": "file:../stele",
     "@pnnh/atom": "file:../atom",
-    "marked": "^12.0.2",
-    "material-file-icons": "^2.4.0",
-    "md5": "^2.3.0",
-    "mime": "^4.0.4",
-    "moment": "^2.30.1",
-    "next": "14.2.3",
-    "node-cron": "^3.0.3",
-    "parse-uri": "^1.0.9",
-    "pluralize": "^8.0.0",
-    "prism-react-renderer": "^2.3.1",
-    "prism-themes": "^1.9.0",
-    "prismjs": "^1.29.0",
-    "prop-types": "^15.8.1",
-    "qs": "^6.12.3",
     "query-string": "^9.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -116,7 +101,6 @@
     "@rollup/plugin-typescript": "^11.1.6",
     "@rollup/plugin-url": "^8.0.1",
     "@types/eslint__js": "^8.42.3",
-    "@types/estree": "^1.0.0",
     "@types/lodash": "^4.17.7",
     "@types/node": "^22.4.1",
     "@typescript-eslint/eslint-plugin": "^8.4.0",
@@ -131,7 +115,6 @@
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-dts": "^6.1.1",
     "rollup-plugin-visualizer": "^5.5.0",
-    "rollup-preserve-directives": "^1.1.1",
     "tslib": "^2.6.3",
     "typescript": "^5.0.3",
     "typescript-eslint": "^8.4.0",
@@ -151,6 +134,7 @@
     "@types/react": "^18.3.3",
     "@types/uuid": "^10.0.0",
     "@types/validator": "^13.12.0",
+    "next": "14.2.8",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "ts-jest": "^29.2.3",
