--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -15,7 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "next": "14.2.8",
-    "@pnnh/atom-react": "file:../.."
+    "@pnnh/atom-react": "0.2.0"
   },
   "devDependencies": {
     "@types/estree": "^1.0.0",
