--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
     "lodash": "^4.17.21",
-    "@pnnh/atom": "file:../atom",
+    "@pnnh/atom": "0.4.0",
     "query-string": "^9.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
