参考material design figma设计文档实现两个按钮 添加vite和express代码用以在开发期快速调试 构建时不再通过dts合并类型声明

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,9 +14,9 @@
     "allowSyntheticDefaultImports": true,
     "rootDir": "src",
     "baseUrl": ".",
-    "outDir": "dts",
+    "outDir": "lib",
     "declaration": true,
-    "declarationDir": "dts",
+    "declarationDir": "lib",
     "emitDeclarationOnly": false,
     "paths": {
       "@/*": [
