--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -12,15 +12,15 @@
   },
   "resolutions": {},
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@pnnh/atom-react": "file:../..",
     "next": "14.2.8",
-    "@pnnh/atom-react": "0.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/estree": "^1.0.0",
     "@types/node": "^18.15.11",
-    "@types/react": "^18.0.31",
+    "@types/react": "^18.3.11",
     "@types/react-dom": "^18.0.11",
     "@types/react-router-dom": "^5.3.2",
     "esbuild": "^0.17.14",
