--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "license": "AGPL-3.0",
   "scripts": {
     "nextjs": "NODE_ENV=development next dev",
-    "build": "rollup --config rollup.config.mjs"
+    "build": "rollup --config rollup.config.mjs",
+    "client": "vite",
+    "server": "tsx src/debug/server/server.tsx"
   },
   "repository": {
     "type": "git",
@@ -45,101 +47,64 @@
     }
   },
   "dependencies": {
-    "is-hotkey": "^0.2.0",
     "@emotion/cache": "^11.13.1",
     "@emotion/css": "^11.13.0",
     "@emotion/react": "^11.13.0",
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.0.13",
-    "@mui/icons-material": "^5.16.5",
-    "@mui/material": "^5.16.5",
-    "@mui/material-nextjs": "^5.16.4",
-    "@next/third-parties": "^14.2.5",
-    "@scure/base": "^1.1.7",
-    "@types/md5": "^2.3.5",
-    "@types/parse-uri": "^1.0.2",
-    "axios": "^1.7.2",
-    "base64url": "^3.0.1",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "form-data": "^4.0.0",
-    "front-matter": "^4.0.2",
+    "@mui/icons-material": "^6.1.3",
+    "@mui/material": "^6.1.3",
+    "@mui/material-nextjs": "^6.1.3",
     "globals": "^15.8.0",
-    "highlight.js": "^11.10.0",
     "html": "^1.0.0",
-    "ignore": "^5.3.1",
-    "istextorbinary": "^9.5.0",
-    "json5": "^2.2.3",
-    "jsonwebtoken": "^9.0.2",
-    "jwks-rsa": "^3.1.0",
     "lodash": "^4.17.21",
     "@pnnh/atom": "0.4.0",
     "query-string": "^9.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "recoil": "^0.7.7",
     "remixicon": "^4.3.0",
     "rfc4648": "^1.5.3",
     "router": "^1.3.8",
     "sharp": "^0.33.4",
-    "sitemap": "^8.0.0",
     "style-object-to-css-string": "^1.1.3",
     "supports-color": "^8.1.1",
     "urlpattern-polyfill": "^10.0.0",
-    "uuid": "^9.0.1",
     "validator": "^13.12.0"
   },
   "devDependencies": {
     "@rollup/plugin-alias": "^5.1.0",
     "@rollup/plugin-strip": "^3.0.4",
-    "@eslint/js": "^9.8.0",
-    "@rollup/plugin-commonjs": "^26.0.1",
+    "@rollup/plugin-commonjs": "^28.0.0",
     "@rollup/plugin-json": "^6.0.1",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-terser": "^0.4.4",
-    "@rollup/plugin-typescript": "^11.1.6",
+    "@rollup/plugin-typescript": "^12.1.0",
     "@rollup/plugin-url": "^8.0.1",
-    "@types/eslint__js": "^8.42.3",
+    "rollup-plugin-sass": "^1.13.2",
+    "@types/express": "^5.0.0",
+    "@types/parse-uri": "^1.0.2",
     "@types/lodash": "^4.17.7",
     "@types/node": "^22.4.1",
-    "@typescript-eslint/eslint-plugin": "^8.4.0",
-    "@typescript-eslint/parser": "^8.4.0",
     "esbuild": "^0.23.1",
-    "eslint": "^9.8.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^7.1.0",
-    "rfc4648": "^1.5.2",
-    "rollup": "^4.21.0",
+    "express": "^5.0.0",
+    "rollup": "4.22.4",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-dts": "^6.1.1",
     "rollup-plugin-visualizer": "^5.5.0",
     "tslib": "^2.6.3",
     "typescript": "^5.0.3",
-    "typescript-eslint": "^8.4.0",
-    "@jest/globals": "^29.7.0",
-    "@next/bundle-analyzer": "^14.2.5",
-    "@playwright/test": "^1.45.3",
-    "@simplewebauthn/types": "^10.0.0",
-    "@testing-library/jest-dom": "^6.4.8",
-    "@testing-library/react": "^16.0.0",
-    "@types/express": "^4.17.21",
     "@types/html": "^1.0.4",
-    "@types/jest": "^29.5.12",
-    "@types/node-cron": "^3.0.11",
-    "@types/prismjs": "^1.26.4",
     "@types/prop-types": "^15.7.12",
     "@types/qs": "^6.9.15",
-    "@types/react": "^18.3.3",
+    "react-router-dom": "^6.26.1",
     "@types/uuid": "^10.0.0",
-    "@types/validator": "^13.12.0",
     "next": "14.2.8",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "ts-jest": "^29.2.3",
+    "@types/react": "^18.3.10",
+    "@types/react-dom": "^18.3.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.11.0",
-    "vite": "^5.4.0"
+    "vite": "^5.4.5"
   }
 }
